--- a/dev/pug/layouts/default.pug
+++ b/dev/pug/layouts/default.pug
@@ -2,7 +2,7 @@
 doctype html
 html(lang="es")
 	block vars
-		- var pageTitle = 'Título Genérico'
+		- var pageTitle = 'Lata Digital'
 
 	head
 		meta(charset="UTF-8")
@@ -13,6 +13,9 @@ html(lang="es")
 		// inject:css
 		// endinject
 		link(rel="stylesheet" href="css/main.min.css")
+		link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800")
+		script(defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous")
+		script(src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js")
 
 	body
 		block header
