--- a/dev/pug/partials/_footer.pug
+++ b/dev/pug/partials/_footer.pug
@@ -1,1 +1,39 @@
-footer
+footer.c-footer
+    .c-inner
+        .c-footer__brand
+            img(src="img/footer-brand.png", alt="Lata digital")
+        .c-footer__nav
+            .c-footer__box
+                h2 Sobre nosotros
+                ul
+                    li
+                        a(href="#") Home
+                    li
+                        a(href="#") Servicios
+                    li
+                        a(href="#") Clientes
+            .c-footer__box
+                h2 Trabajos
+                ul
+                    li
+                        a(href="#") Redes sociales
+                    li
+                        a(href="#") Diseño y desarrollo web
+                    li
+                        a(href="#") Audiovisual
+            .c-footer__box
+                h2 Contacto
+                ul
+                    li
+                        a(href="#") magnere 1540, Providencia
+                    li
+                        a(href="#") +56 9 9999 9999
+            .c-footer__box
+                h2 Redes sociales
+                a.c-footer__social(href="#") 
+                    span.fab.fa-linkedin-in
+                a.c-footer__social(href="#") 
+                    span.fab.fa-facebook-f
+                a.c-footer__social(href="#") 
+                    span.fab.fa-instagram                                        
+    
