--- a/dev/pug/partials/_header.pug
+++ b/dev/pug/partials/_header.pug
@@ -1,4 +1,6 @@
 header.c-header
-	a.c-header__brand(href="#")
-		img.c-header__image(src="", alt="")
-
+	.c-inner
+		a.c-header__brand(href="#")
+			img.c-header__image(src="img/_header-logo.png" alt="Lata Digital")
+		a.c-header__nav(href="#")
+			span.fas.fa-bars
