--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -33,6 +33,8 @@
 @import 'project/components/footer';
 @import 'project/components/header';
 @import 'project/components/nav';
+@import 'project/components/bigbanner';
+@import 'project/components/home';
 
 // Utilities
 @import 'project/utilities';
