--- a/dev/scss/project/_vars.scss
+++ b/dev/scss/project/_vars.scss
@@ -8,8 +8,8 @@ $color_bg:'';
 
 // fonts
 $base_size:14px;
-$font_base:helvetica, arial, sans-serif;
-$font_highlight:helvetica, arial, sans-serif;
+$font_base:'Open Sans', sans-serif;
+$font_highlight:'Open Sans', sans-serif;
 
 // Common
 $transition-duration: .3s !default;
