--- a/dev/scss/project/_reset.scss
+++ b/dev/scss/project/_reset.scss
@@ -20,6 +20,8 @@ body {
 	background-color:$color_bg;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
+	width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
